force-app/main/default/objects/Integration_Setting_Detail__mdt/Integration_Setting_Detail__mdt.object-meta.xml
<CustomObject>
    <description>Child records for Integration Setting - stores key-value configuration parameters</description>
    <label>Integration Setting Detail</label>
    <pluralLabel>Integration Setting Details</pluralLabel>
</CustomObject>