force-app/main/default/objects/Integration_Setting_Detail__mdt/fields/Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setting__c</fullName>
    <label>Integration Setting</label>
    <referenceTo>Integration_Setting__mdt</referenceTo>
    <relationshipName>Integration_Setting_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>