force-app/main/default/objects/Integration_Setting_Detail__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>